--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -1,6 +1,19 @@
 <head>
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-56433935-1"></script>
+<!-- does not seem to work
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-118582143-1"></script>
     <script src="{{ "js/ga.js" | relURL }}"></script>
+-->    
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-118582143-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-118582143-1');
+</script>
+
+
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width initial-scale=1" />
