--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -1,8 +1,4 @@
-<head>
-<!-- does not seem to work
-        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-118582143-1"></script>
-    <script src="{{ "js/ga.js" | relURL }}"></script>
--->    
+<head> 
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-118582143-1"></script>
 <script>
@@ -12,7 +8,8 @@
 
   gtag('config', 'UA-118582143-1');
 </script>
-
+<!-- TODO: this should only be included inthe main index page  -->
+<script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 
 
     <meta charset="utf-8">
