--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -30,6 +30,6 @@
     <link rel="dns-prefetch" href="https://www.google-analytics.com">
     <link rel="dns-prefetch" href="https://www.googleadservices.com">
     {{ with .Site.Home.OutputFormats.Get "RSS" -}}
-    <link rel="{{ .Rel }}" href="{{ .Permalink }}" type="application/rss+xml" title="McKinley Park Development Council RSS Feed" />
+    <link rel="{{ .Rel }}" href="{{ .Permalink }}" type="application/rss+xml" title="The McKinley Park Development Council RSS Feed" />
     {{ end  }}
 </head>
